<resources>
    <string name="app_name">HomeSweetHome</string>
    <string name="server_ip_adress">http://test.net</string>
    <string name="server_port">35423</string>
    <string name="CLOUD_VISION_API_KEY">test-test</string>
    <string name="ANDROID_CERT_HEADER">X-Android-Cert</string>
    <string name="ANDROID_PACKAGE_HEADER">X-Android-Package</string>
    <string name="action_register">/api/authentication/register</string>
    <string name="action_login">/api/authentication/login</string>
    <string name="action_verification">/api/authentication/emailverification</string>
    <string name="action_verify">/api/authentication/verifyemail</string>
    <string name="action_invitehomeaccept">/api/home/invitehomeaccept</string>
    <string name="action_joinhomeaccept">/api/home/joinhomeaccept</string>
    <string name="action_invitehomerequest">/api/home/invitehomerequest</string>
    <string name="action_joinhomerequest">/api/home/joinhomerequest</string>
    <string name="action_createhome">/api/home/createnewhome</string>
    <string name="action_addnote">/api/notepad/addnote</string>
    <string name="action_deletenote">/api/notepad/deletenote</string>
    <string name="action_updatenote">/api/notepad/updatenote</string>
    <string name="action_updateshoppinglist">/api/ShoppingList/UpdateShoppingList</string>
    <string name="action_shoppingnotification">/api/ShoppingList/SendNotification</string>
    <string name="action_addexpense">/api/expense/addexpense</string>
    <string name="action_leavehome">/api/home/leavehome</string>
    <string name="action_addmeal">/api/menu/addmeal</string>
    <string name="action_addmenu">/api/menu/addmenu</string>
    <string name="action_deletemenu">/api/menu/deletemenu</string>
    <string name="action_updatemenu">/api/menu/updatemenu</string>
    <string name="action_updatemeal">/api/menu/updatemeal</string>
    <string name="action_updateexpense">/api/expense/UpdateExpense</string>
    <string name="action_deleteexpense">/api/expense/DeleteExpense</string>
    <string name="action_addduty">/api/housework/addhousework</string>
    <string name="action_deleteduty">/api/housework/deletehousework</string>
    <string name="action_sync_menu">/api/Menu/SynchronizeMenus</string>
    <string name="action_sync_meals">/api/Menu/SynchronizeMeals</string>
    <string name="action_sync_notepad">/api/Notepad/Synchronize</string>
    <string name="action_sync_shopping">/api/ShoppingList/Synchronize</string>
    <string name="action_sync_duty">/api/housework/synchronize</string>
    <string name="action_numberOfSyncItem">5</string>
    <string name="SignUpTitle">Register</string>
    <string name="LoginTitle">Login</string>
    <string name="ForgotPasswordTitle">Password Reset</string>
    <string name="LoginButton">Login</string>
    <string name="ForgotPasswordButton">Forgot Password</string>
    <string name="SignUpButton">Register</string>
    <string name="Dogrula">Verify</string>
    <string name="YenidenGonder">Send Again</string>
    <string name="EmailGonderildiBildirimi">Email was sent again. Plase check the spam inbox</string>
    <string name="LogOut">Logout</string>
    <string name="LoginProgressContent">Logging in</string>
    <string name="RegisterProgressContent">Registering in</string>
    <string name="SynchronizeProgressContent">Synchronizing</string>
    <string name="UsernameTextHint">User Name</string>
    <string name="PasswordTextHint">Password</string>
    <string name="Ad">Name</string>
    <string name="Soyad">Surname</string>
    <string name="email">E-Mail</string>
    <string name="phone">Telephone: ( With Locale )</string>
    <string name="sifremihatirla">Remember my password</string>
    <string name="autologin">Auto Login</string>
    <string name="signup_ok">Registeration successfully completed</string>
    <string name="signup_ok_msg">After your first login, verification e-mail will send.
        \nPlease verify your account
        \n\nNote : Sometimes e-mail may fall spam inbox</string>
    <string name="signup_ok_button">Confirm</string>
    <string name="error_server_not_respond">Server not respond</string>
    <string name="SignUp_Error_Username">User name must longer than 3, shorter than 20 letters</string>
    <string name="SignUp_Error_Password">Password must longer than 6 letters</string>
    <string name="SignUp_Error_PasswordNotMatched">Passwords not match</string>
    <string name="SignUp_Error_EmailNotMatched">E-mails not match</string>
    <string name="SignUo_Error_PhoneFormatError">Phone number format is not correct</string>
    <string name="SignUp_UserAgreement">Agreement</string>
    <string name="Menu_edit">Edit</string>
    <string name="Menu_delete">Delete</string>
    <string name="SignUp_Error_CannotBeEmpty">This field cannot be empty</string>
    <string name="tablo_position_error_title">First, you need to join a home</string>
    <string name="tablo_position_error_content">When you doesnt have a home, you can not use this features</string>
    <string name="tablo_gidertakip">Expense Table</string>
    <string name="tablo_gidertakip_aciklama">In here, you can track the expenses</string>
    <string name="tablo_alisverislistesi">Shopping List</string>
    <string name="tablo_alisverislistesi_aciklama">In here, you can control the shopping list for home</string>
    <string name="tablo_notlar">Notes</string>
    <string name="tablo_notlar_aciklama">In here, you can take notes for home</string>
    <string name="tablo_ispaylasimi">Chores </string>
    <string name="tablo_ispaylasimi_aciklama">You can edit repetitive jobs from time to time</string>
    <string name="tablo_yemek">Monthly Meals</string>
    <string name="tablo_yemek_aciklama">In here, you can create, edit and track monthly meals</string>
    <string name="table_duty_name">Name :</string>
    <string name="table_duty_interval">Date :</string>
    <string name="table_duty_dutyname">Duty Name :</string>
    <string name="dialog_duty_name">Choose the attendant person :</string>
    <string name="dialog_duty_date">Date (1 to 31)</string>
    <string name="dialog_duty_dutyname">Duty Name</string>
    <string name="HttpConnectionTimeOut">4500</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_expense">HomeSweetHome - Expenses</string>
    <string name="title_activity_notepad">HomeSweetHome - Notes</string>
    <string name="title_activity_login">HomeSweetHome - Login</string>
    <string name="title_activity_signup">HomeSweetHome - Signup</string>
    <string name="title_activity_menu">HomeSweetHome - Meals</string>
    <string name="title_activity_meals">HomeSweetHome - Add Meal</string>
    <string name="title_activity_shopping">HomeSweetHome - Shopping List</string>
    <string name="title_activity_duty">HomeSweetHome - Chores</string>
    <string name="checkPass">net.ddns.morigg.homesweethomeapp.checkPass</string>
    <string name="textUser">net.ddns.morigg.homesweethomeapp.textUser</string>
    <string name="textPass">net.ddns.morigg.homesweethomeapp.textPass</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="Navigation_MainPage">Main Page</string>
    <string name="Navigation_Home">Home</string>
    <string name="Navigation_Debt">Debts</string>
    <string name="Navigation_InviteHome">Invite Home</string>
    <string name="Navigation_JoinHome">Join Home</string>
    <string name="Navigation_Resign">Quit Home</string>
    <string name="Navigation_ResignTitle">Are you sure to quit home?</string>
    <string name="Navigation_ResignApply">Quit</string>
    <string name="Navigation_Disband">Disband Home</string>
    <string name="Navigation_Kick">Kick from home</string>
    <string name="Navigation_Apply">Applies</string>
    <string name="Navigation_Create">Create Home</string>
    <string name="Navigation_HomeApplies">Applies</string>
    <string name="Navigation_AcceptInvite">Accept Invite</string>
    <string name="Navigation_InviteHomeHint">Name of the person to be invited</string>
    <string name="Navigation_InviteHomeAction">Invite Home</string>
    <string name="Navigation_JoinHomeHint">Please enter the name of the house you want to join</string>
    <string name="Navigation_JoinHomeAction">Join</string>
    <string name="Navigation_CreateHint">Please enter the name of the house you want to create</string>
    <string name="Navigation_CreateHomeAction">Create</string>
    <string name="Navigation_DebtToOne">DEBT : </string>
    <string name="Navigation_Asset">ASSETS : </string>
    <string name="Navigation_CreateErrorTitle">Error on creating home</string>
    <string name="Navigation_CreateErrorContent">Error on creating home. Name has been already taken.</string>
    <string name="Navigation_CreateSuccessfulHint">Home create successfully</string>
    <string name="Navigation_JoinSuccessfulHint">You joined a home</string>
    <string name="Navigation_CreateSuccessfulContent">Returns to the login screen</string>
    <string name="Navigation_CreateSuccessfulOkey">Confirm</string>
    <string name="Navigation_JoinHomeAcceptTitle">You joined a home</string>
    <string name="Navigation_JoinHomeAcceptContent">Application will be restart</string>
    <string name="Navigation_JoinHomeRequestTitle">Join home request successfully sent</string>
    <string name="Navigation_JoinHomeRequestContent">When the administrator of home accept the apply, you will join the home</string>
    <string name="Navigation_ResignHomeRequestTitle">Are you sure to quit home?</string>
    <string name="Navigation_ResignHomeRequestNewAdmin">Select a new home administrator</string>
    <string name="Navigation_FullSync">Synchronize</string>
    <string name="NotJoinedHomeTitle">You are not member of a home</string>
    <string name="NotJoinedHomeHint">While you dont have a home, you can not available to use this application. Please join to a home</string>
    <string name="Notepad_EditTextTitle">Title</string>
    <string name="Notepad_EditTextContent">Content</string>
    <string name="Notepad_Delete_Okay">Delete</string>
    <string name="Notepad_Delete_Cancel">Cancel</string>
    <string name="Notepad_Delete_Title">Are you sure to delete this note?</string>
    <string name="Notepad_Add_Hint">Add Note</string>
    <string name="Notepad_Delete_Hint">Delete Note</string>
    <string name="Notepad_Edit_Hint">Edit Note</string>
    <string name="Notepad_UpdatedNotif">Notes Updated</string>
    <string name="ShoppingList_Hint">Shopping List</string>
    <string name="ShoppingList_ItemAdd">Add Item</string>
    <string name="ShoppingMenu_Save">Save</string>
    <string name="ShoppingMenu_RemovePurchased">Clear those taken</string>
    <string name="ShoppingMenu_Actions">Actions :</string>
    <string name="ShoppingMenu_Notifications">Send notifications to homemates</string>
    <string name="ShoppingList_SyncTitle">Are you sure to save changes?</string>
    <string name="ShoppingList_NewListTitle">One of homemates update the list</string>
    <string name="ShoppingList_NewListHint">Do you want to get updated list?</string>
    <string name="ShoppingList_UpdatedNotif">Shopping list updated</string>
    <string name="Expense_EditTextTitle">Title :</string>
    <string name="Expense_DateHint">Date :</string>
    <string name="Expense_EditTextContent">Content</string>
    <string name="Expense_Author">Payer :</string>
    <string name="Expense_EditTextType">Type :</string>
    <string name="Expense_EditTextCost">Cost :</string>
    <string name="Expense_CostError">You entered an incorrect value</string>
    <string name="type_to_search">Search</string>
    <string name="Expense_participants">Participans</string>
</resources>