<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_margin="5dp"
        android:text="Action Name"
        android:id="@+id/expensedialog_hint"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:visibility="gone"
            android:id="@+id/expensedialog_author"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:textSize="16sp"
            android:gravity="center"
            android:hint="@string/Expense_Author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:visibility="gone"
            android:id="@+id/expensedialog_date"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:textSize="16sp"
            android:gravity="center"
            android:hint="@string/Expense_DateHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/Expense_EditTextTitle"
                android:id="@+id/expensedialog_title"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:textColor="@drawable/spinner_enable"
            android:id="@+id/expensedialog_type"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </Spinner>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/expensedialog_cost"
                android:hint="@string/Expense_EditTextCost"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <net.ddns.morigg.homesweethomeapp.recycleradapter.MultiSpinnerSearch
            app:hintText="@string/Expense_participants"
            android:choiceMode="multipleChoice"
            android:id="@+id/expense_userList"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </net.ddns.morigg.homesweethomeapp.recycleradapter.MultiSpinnerSearch>

    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_margin="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/expensedialog_content"
                    android:hint="@string/Expense_EditTextContent"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/expensedialog_camera"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_weight="1"
                android:src="@drawable/ic_camera_alt_black_24dp" />

        </RelativeLayout>



    </LinearLayout>







</LinearLayout>