<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:layout_margin="7dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/duty_card"
        android:backgroundTint="@color/LemonChiffon"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:visibility="gone"
                android:gravity="center"
                android:id="@+id/duty_ViewOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="&#8942;"
                android:textAppearance="?android:textAppearanceLarge" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:gravity="center"
                android:layout_margin="3dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textSize="16sp"
                    android:text="@string/table_duty_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:hint="TEST"
                    android:id="@+id/duty_recyc_author"
                    android:textSize="16sp"
                    android:text="Kişi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_margin="3dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textSize="16sp"
                    android:text="@string/table_duty_interval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:hint="TEST"
                    android:id="@+id/duty_recyc_date"
                    android:textSize="16sp"
                    android:text="gün"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_margin="3dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textSize="16sp"
                    android:text="@string/table_duty_dutyname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:hint="TEST"
                    android:id="@+id/duty_recyc_action"
                    android:textSize="16sp"
                    android:text="iş"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>